Working Login pages

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -27,6 +27,10 @@ page-login {
 
       .login-btns {
         margin-top: 5%;
+
+        .login-submit {
+          width: 15em;
+        }
       }
     }
   }
